hardcoded git repo name into link for movies of front page. Should be deleted once migrated to todor's git

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,9 +15,9 @@ layout: base
   {%- for movie in allMovies -%}
     {%- if movie.movieID != null -%}
         <div class="home-page-grid-item">
-          <a href="/movies/{{ movie.movieID}}.html">
+          <a href="/Todor_Website/movies/{{ movie.movieID}}.html">
             <div class ="movie-posters">
-              <img src="../images/movie_posters/{{ movie.movieID }}.jpg" alt="Girl in a jacket">
+              <img src="../images/movie_posters/{{ movie.movieID }}.jpg" alt="Girl in a jacket" class="home-page-movie-image">
             </div>
           </a>
         </div>
