--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,5 +30,26 @@
     text-align: center;
     overflow: hidden;
     background-color: #e8e9eb;
-
   }
+
+
+.home-page-movie-image {
+  width:100%;
+  height:100%;
+  object-fit:fill;
+  opacity: 1;
+  filter: grayscale(0%);
+  transform: scale(1);
+  overflow:hidden;
+
+}
+
+.home-page-movie-image:hover {
+    opacity: 0.8;
+    width: 100%;
+    height:100%;
+    transform: scale(1.1);
+    filter: grayscale(30%);
+    transition: transform .5s ease;
+    cursor: pointer;
+}
