Added code to create individual movie pages; changed footer to only include relevant information; added favicon images to root of directory; fixed mistakes and updated information regarding movies

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,11 +6,21 @@
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize";
 
+// .page-content {
+//   background-color:black;
+// }
+//
+// .site-header {
+//   background-color:black;
+// }
+//
+// .site-footer {
+//   background-color:black;
+// }
 
-  .movie-posters {
+.movie-posters {
     width: 100%;
-    display: grid;
-    columns: 200px 3;
+    columns: 700px 3;
     grid-template-columns: repeat(auto-fill, 250px);
     justify-content: center;
     padding: 0px;
@@ -18,7 +28,7 @@
 
   // Home page css
 
-  .home-page-grid-container {
+.home-page-grid-container {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
@@ -26,12 +36,12 @@
     grid-gap: 20px;
   }
 
-  .home-page-grid-item {
+.home-page-grid-item {
     text-align: center;
+    position: relative;
     overflow: hidden;
     background-color: #e8e9eb;
   }
-
 
 .home-page-movie-image {
   width:100%;
@@ -44,12 +54,80 @@
 
 }
 
-.home-page-movie-image:hover {
-    opacity: 0.8;
+.home-page-grid-item:hover .home-page-movie-image{
+    opacity: 0.5;
     width: 100%;
     height:100%;
-    transform: scale(1.1);
-    filter: grayscale(30%);
+    transform: scale(1.02);
+    filter: grayscale(100%);
     transition: transform .5s ease;
     cursor: pointer;
 }
+
+.home-page-movie-name {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 150%;
+    color: white;
+}
+
+.home-page-grid-item:hover .home-page-movie-name{
+    opacity: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 150%;
+    color: white;
+}
+
+
+/*
+===========================
+ DROP DOWN CSS
+===========================
+*/
+  /* Dropdown Button */
+.dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 190px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
