--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,13 +18,32 @@
         </label>
 
         <div class="trigger">
+          {% assign links = site.data.menu %}
+          {% for link in links %}
+            {% if link.sublinks %}
+              <div class="dropdown">
+                <a class="page-link" href="{{link.url | relative_url}}">{{link.title}}</a>
+                  <div class="dropdown-content">
+                    {% for sublink in link.sublinks %}
+                    <a href="{{sublink.url | relative_url}}">{{sublink.title}}</a>
+                    {%- endfor -%}
+                  </div>
+              </div>
+            {% else %}
+              <a class="page-link" href="{{link.url | relative_url}}">{{link.title}}</a>
+            {%- endif -%}
+
+          {%- endfor -%}
+        </div>
+
+        <!-- <div class="trigger">
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
-        </div>
+        </div> -->
       </nav>
     {%- endif -%}
   </div>
