--- a/_layouts/movie.html
+++ b/_layouts/movie.html
@@ -11,15 +11,59 @@ layout: base
       {%- for movie in allMovies -%}
         {%- if movie.movieID == page.movieID -%}
 
-        <!-- All movie relevnat information and formatting is printed here -->
+          <!-- All movie relevnat information and formatting is printed here -->
 
-        <p>{{movie.name}}<p>
-        <p>{{movie.year}}<p>
-        <p>{{movie.url}}<p>
+          <p style="font-size: 40px"><b>{{movie.name}}</b><p>
+          <p>{{movie.year}}<p>
+            <iframe width="100%" src="https://www.youtube.com/embed/{{movie.url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+          <!-- <iframe src=https://www.youtube.com/embed/{{movie.url}} frameborder="0" allowfullscreen>
+          </iframe> -->
 
-        {%- for awards in movie.Awards -%}
-          <!-- figure out how to print awards -->
-        {%- endfor -%}
+          <p>{{movie.description}}</p>
+          
+
+          {%- if movie.Awards != null -%}
+
+          <center>
+            <p style="font-size: 20px; margin-top:1.5cm;"><b>Film Festivals</b><p>
+          </center>
+
+            {%- for awardType in movie.Awards -%}
+
+              <p><b>{{awardType[0]}}</b><p>
+
+              {%- for award in awardType[1] -%}
+                <p> &nbsp &nbsp {{award}} <p>
+              {%- endfor -%}
+
+            {%- endfor -%}
+          {%- endif -%}
+
+
+          <center>
+            <p style="font-size: 20px; margin-top:1.5cm;"><b>Cast and Crew</b><p>
+          </center>
+
+          {%- if movie.directedBy != null -%}
+            <p>Directed by: <i>{{movie.directedBy}}</i><p>
+          {%- endif -%}
+
+          {%- if movie.writtenBy != null -%}
+            <p>Written by: <i>{{movie.writtenBy}}</i><p>
+          {%- endif -%}
+
+          {%- if movie.editedBy != null -%}
+            <p>Edited by: <i>{{movie.shotBy}}</i><p>
+          {%- endif -%}
+
+          {%- if movie.shotBy != null -%}
+            <p>Shot by: <i>{{movie.shotBy}}</i><p>
+          {%- endif -%}
+
+          {%- if movie.actors != null -%}
+            <p>Starring: <i>{{movie.actors}}</i><p>
+          {%- endif -%}
 
         {%- endif -%}
       {%- endfor -%}
