--- a/_layouts/movie.html
+++ b/_layouts/movie.html
@@ -15,11 +15,17 @@ layout: base
 
           <p style="font-size: 40px"><b>{{movie.name}}</b><p>
           <p>{{movie.year}}<p>
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{movie.url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-            </iframe>
+
+            <div class="auto-resizable-iframe">
+              <div>
+                <iframe  src="https://www.youtube.com/embed/{{movie.url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                </iframe>
+              </div>
+            </div>
           <!-- <iframe src=https://www.youtube.com/embed/{{movie.url}} frameborder="0" allowfullscreen>
           </iframe> -->
 
+          <br>
           <p>{{movie.description}}</p>
 
 
