--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,29 @@
 //   background-color:black;
 // }
 
+
+.auto-resizable-iframe {
+  max-width: 1000px;
+  margin: 0px auto;
+}
+
+.auto-resizable-iframe > div {
+  position: relative;
+  padding-bottom: 50%;
+  height: 0px;
+}
+
+.auto-resizable-iframe iframe {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
 .movie-posters {
     width: 100%;
     columns: 700px 3;
