--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,10 +15,10 @@ layout: base
   {%- for movie in allMovies -%}
     {%- if movie.movieID != null -%}
         <div class="home-page-grid-item">
-          <a href="/Todor_Website/movies/{{ movie.movieID}}.html">
+          <a href="/movies/{{ movie.movieID}}.html">
             <!-- Something might need to be pre-pended here to make the links work -->
             <div class ="movie-posters">
-              <img src="/Todor_Website/images/movie_posters/{{ movie.movieID }}.png" alt="Girl in a jacket" class="home-page-movie-image" >
+              <img src="/images/movie_posters/{{ movie.movieID }}.png" alt="Girl in a jacket" class="home-page-movie-image" >
               <p class="home-page-movie-name">{{ movie.name }}</p>
             </div>
           </a>
