--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: base
           <a href="/movies/{{ movie.movieID}}.html">
             <!-- Something might need to be pre-pended here to make the links work -->
             <div class ="movie-posters">
-              <img src="/images/movie_posters/{{ movie.movieID }}.png" alt="Girl in a jacket" class="home-page-movie-image" >
+              <img src="/images/movie_posters/{{ movie.movieID }}.png" alt="Movie Poster, Clickable link to Movie Page" class="home-page-movie-image" >
               <p class="home-page-movie-name">{{ movie.name }}</p>
             </div>
           </a>
