--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,6 +19,13 @@
 // }
 
 
+#eventImage {
+  float: left;
+  margin: 0 15px 0 0;
+  height: auto;
+  width: 200px;
+}
+
 .auto-resizable-iframe {
   max-width: 1000px;
   margin: 0px auto;
