--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -4,7 +4,6 @@ layout: base
 
 <html>
   <body>
-
         {%- assign allEvents = site.data.events -%}
 
         <br>
@@ -18,19 +17,8 @@ layout: base
 
           {% if event_date > today_date %}
 
-              <div>
-                <img src="/images/events/{{ event.image }}.png" alt="Event Image" class="eventImage">
-              </div>
+            {% include events_individual.html %}
 
-              <p><b>{{ event.date | date: "%b %d" }}, {{ event.location }}</b><p>
-                <!-- , %Y" -->
-
-              <a href="{{ event.link }}"><p><b>{{ event.name }}</b><p></a>
-
-              <p>{{ event.description }}<p>
-
-              <br style="clear:both" />
-              <br>
           {%- endif -%}
 
         {%- endfor -%}
@@ -44,18 +32,8 @@ layout: base
 
           {% if today_date > event_date %}
 
-              <div>
-                <img src="/images/events/{{ event.image }}.png" alt="Event Image" class="eventImage">
-              </div>
+            {% include events_individual.html %}
 
-              <p><b>{{ event.date | date: "%b %d. %Y" }}, {{ event.location }}</b><p>
-
-              <a href="{{ event.link }}"><p><b>{{ event.name }}</b><p></a>
-
-              <p>{{ event.description }}<p>
-
-              <br style="clear:both" />
-              <br>
           {%- endif -%}
 
         {%- endfor -%}
