Fixed liquid code so that events that are happening today are listed under upcoming events. Previously they would not have shown up

--- a/_includes/events_individual.html
+++ b/_includes/events_individual.html
@@ -3,7 +3,7 @@
 </div>
 
 
-{%- if event_date > today_date -%}
+{%- if event_date >= today_date -%}
   <p><b>{{ event.date | date: "%b %d" }}, {{ event.location }}</b><p>
 {%- endif -%}
 
