--- a/_layouts/movie.html
+++ b/_layouts/movie.html
@@ -14,7 +14,7 @@ layout: base
           <!-- All movie relevnat information and formatting is printed here -->
 
           <p style="font-size: 40px"><b>{{movie.name}}</b><p>
-          <p>{{movie.year}}<p>
+          <p style="font-size: 25px">{{movie.year}}<p>
 
             <div class="auto-resizable-iframe">
               <div>
