--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -10,8 +10,11 @@ layout: base
         {%- assign allEvents = site.data.events -%}
         {% assign today_date = 'now' | date: '%D' %}
 
+
         <br>
         <h2> Upcoming Events </h2>
+        <br>
+        <p>Stay tuned for information about the 2024 Walnut Lane Film Festival.</p>
         <br>
 
         {%- for event in allEvents -%}
