Changed wrong line of code where movie pages the editedby field was filled in by the shotby value

--- a/_layouts/movie.html
+++ b/_layouts/movie.html
@@ -60,7 +60,7 @@ layout: base
           {%- endif -%}
 
           {%- if movie.editedBy != null -%}
-            <p>Edited by: <i>{{movie.shotBy}}</i><p>
+            <p>Edited by: <i>{{movie.editedBy}}</i><p>
           {%- endif -%}
 
           {%- if movie.shotBy != null -%}
